Add basic html structure for heading and score area

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </div>
 
     <div class="score-area">
-        <p class="scores">Correct Answers <score id="score">0</score></p>
-        <p class="scores">Incorrect Answers <score id="incorrect">0</score></p>
+        <p class="scores">Correct Answers <span id="score">0</span></p>
+        <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
     </div>
 
     <script src="assets/js/script.js"></script>
